# Ruki-Pass

./: LICENSE.md  README.md  pass Chat 1.md  passwoard-chat-2.md  passwoard-chat-3.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: assistant.py  cracker.py  hashing.py  main.py  mutations.py
backend/tests/: test_cracker.py  test_features.py  test_verify.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  AssistantPanel.tsx  BatchTab.tsx  BcryptTab.tsx  CrackShared.tsx  CrackerTab.tsx  Dropdown.tsx  Hasher.tsx  HistoryPanel.tsx  Pbkdf2Tab.tsx  api.ts  history.ts  index.css  main.tsx
