[project]
name = "ruki-pass-backend"
version = "0.1.0"
description = "Ruki-Pass backend — hash-cracking research API (MD5 and more)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.0",
    "fastapi>=0.115",
    "google-genai>=2.10.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
